# tts_webui_extension.omnivoice

./: README.md  pyproject.toml
tts_webui_extension/omnivoice/: __init__.py  api.py  gradio_app.py  main.py  openai_api_adapter.py
