[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.omnivoice"
version = "0.0.1"
description = "A template extension for TTS Generation WebUI"
readme = "README.md"
authors = [
    { name="rsxdalv" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your dependencies here
    # "torch",
    "omnivoice@git+https://github.com/rsxdalv/tts-webui.OmniVoice@pkg",
]
urls = { "Homepage" = "https://github.com/rsxdalv/tts_webui_extension.omnivoice" }

[tool.setuptools.packages.find]
namespaces = true
