[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.omnivoice"
version = "1.1.0"
description = "A template extension for TTS Generation WebUI"
readme = "README.md"
authors = [
    { name="rsxdalv" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your dependencies here
    # "torch",
    "omnivoice@git+https://github.com/rsxdalv/tts-webui.OmniVoice@pkg",
]
urls = { "Homepage" = "https://github.com/rsxdalv/tts_webui_extension.omnivoice" }

[tool.setuptools.packages.find]
namespaces = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle (E,F,W) + isort (I)
ignore = ["E501", "F401", "E402"]

[tool.ruff.format]
quote-style = "double"  # Match black's default
